[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/menuObjects/LoginScreen/LoginScreen.gd" type="Script" id=1]
[ext_resource path="res://scenes/menuObjects/Background.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/menuObjects/Options/Options.tscn" type="PackedScene" id=3]
[ext_resource path="res://resources/Fonts/Oswald/static/Oswald-SemiBold.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://assets/fonts/xolonium/xolonium-fonts-4.1/ttf/Xolonium-Regular.ttf"

[sub_resource type="DynamicFont" id=2]
size = 11
font_data = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 24
font_data = ExtResource( 4 )

[node name="LogIn" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Background" parent="." instance=ExtResource( 2 )]

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 550.0
margin_top = 300.0
margin_right = 772.0
margin_bottom = 497.0

[node name="login" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 243.0
margin_bottom = 14.0

[node name="loginLabel" type="Label" parent="VBoxContainer/login"]
margin_right = 81.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Login Screen"
align = 1

[node name="username" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 18.0
margin_right = 243.0
margin_bottom = 42.0
size_flags_horizontal = 3

[node name="usernameLabel" type="Label" parent="VBoxContainer/username"]
margin_top = 5.0
margin_right = 68.0
margin_bottom = 19.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "username:"

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/username"]
margin_left = 72.0
margin_right = 243.0
margin_bottom = 24.0
rect_min_size = Vector2( 150, 0 )
size_flags_horizontal = 3
placeholder_text = "email"
caret_blink = true
caret_blink_speed = 0.5

[node name="password" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 46.0
margin_right = 243.0
margin_bottom = 70.0
size_flags_horizontal = 3

[node name="passwordLabel" type="Label" parent="VBoxContainer/password"]
margin_top = 5.0
margin_right = 64.0
margin_bottom = 19.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "password:"

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/password"]
margin_left = 68.0
margin_right = 243.0
margin_bottom = 24.0
rect_min_size = Vector2( 150, 0 )
size_flags_horizontal = 3
secret = true
placeholder_text = "password"
caret_blink = true
caret_blink_speed = 0.5

[node name="loginButton" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 74.0
margin_right = 243.0
margin_bottom = 98.0
size_flags_horizontal = 3

[node name="Button" type="Button" parent="VBoxContainer/loginButton"]
margin_right = 46.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "Login"

[node name="RegisterButton" type="Button" parent="VBoxContainer/loginButton"]
margin_left = 50.0
margin_right = 114.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "Register"

[node name="CheckBox" type="CheckBox" parent="VBoxContainer/loginButton"]
margin_left = 118.0
margin_right = 142.0
margin_bottom = 24.0

[node name="Label" type="Label" parent="VBoxContainer/loginButton"]
margin_left = 146.0
margin_top = 5.0
margin_right = 243.0
margin_bottom = 19.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Save username"

[node name="options" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 102.0
margin_right = 243.0
margin_bottom = 122.0

[node name="Button2" type="Button" parent="VBoxContainer/options"]
margin_right = 56.0
margin_bottom = 20.0
text = "Option"

[node name="Button3" type="Button" parent="VBoxContainer/options"]
margin_left = 60.0
margin_right = 143.0
margin_bottom = 20.0
text = "Client Page"

[node name="notification" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 126.0
margin_right = 243.0
margin_bottom = 176.0
rect_min_size = Vector2( 0, 50 )

[node name="Label" type="Label" parent="VBoxContainer/notification"]
margin_right = 243.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = SubResource( 2 )
autowrap = true

[node name="Testing" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 180.0
margin_right = 243.0
margin_bottom = 180.0

[node name="Button1" type="Button" parent="VBoxContainer/Testing"]
visible = false
margin_right = 58.0
margin_bottom = 20.0
text = "Testing"

[node name="Options" parent="." instance=ExtResource( 3 )]
visible = false

[node name="Label" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -180.0
margin_right = -6.0
margin_bottom = 36.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "Version XXXXXXXX"

[connection signal="focus_entered" from="VBoxContainer/username/LineEdit" to="." method="_on_LineEdit_focus_entered"]
[connection signal="focus_exited" from="VBoxContainer/username/LineEdit" to="." method="_on_LineEdit_focus_exited"]
[connection signal="mouse_entered" from="VBoxContainer/username/LineEdit" to="." method="_on_LineEdit_mouse_entered"]
[connection signal="text_changed" from="VBoxContainer/username/LineEdit" to="." method="_on_LineEdit_text_changed"]
[connection signal="text_entered" from="VBoxContainer/username/LineEdit" to="." method="_on_LineEdit_text_entered"]
[connection signal="focus_entered" from="VBoxContainer/password/LineEdit" to="." method="_on_LineEdit_focus_entered"]
[connection signal="mouse_entered" from="VBoxContainer/password/LineEdit" to="." method="_on_LineEdit_mouse_entered"]
[connection signal="text_changed" from="VBoxContainer/password/LineEdit" to="." method="_on_LineEdit_text_changed"]
[connection signal="text_entered" from="VBoxContainer/password/LineEdit" to="." method="_on_LineEdit_text_entered"]
[connection signal="mouse_entered" from="VBoxContainer/loginButton/Button" to="." method="_on_Button_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/loginButton/Button" to="." method="_on_Button_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/loginButton/RegisterButton" to="." method="_on_Button_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/loginButton/RegisterButton" to="." method="_on_RegisterButton_pressed"]
[connection signal="toggled" from="VBoxContainer/loginButton/CheckBox" to="." method="_on_CheckBox_toggled"]
[connection signal="mouse_entered" from="VBoxContainer/options/Button2" to="." method="_on_Button_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/options/Button2" to="." method="_on_Button2_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/options/Button3" to="." method="_on_Button_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/options/Button3" to="." method="_on_Button3_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/Testing/Button1" to="." method="_on_Button_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/Testing/Button1" to="." method="_on_Button1_pressed"]
